--- a/homeworks/week17/hw1/views/index.ejs
+++ b/homeworks/week17/hw1/views/index.ejs
@@ -27,7 +27,7 @@
             </div>
                 <% if (username == article[i].User.username) { %>
             <div class='article__btn-position font-Merri'>
-              <a class='article__btn-style' href='update_article/<%= article[i].id %>'>
+              <a class='article__btn-style' href='update-article/<%= article[i].id %>'>
                 <div class='btn__edit'>
                   <div class='icon__edit-style icon__edit'></div><span>Edit</span>
                 </div>
