--- a/homeworks/week17/hw1/views/update_article.ejs
+++ b/homeworks/week17/hw1/views/update_article.ejs
@@ -20,7 +20,7 @@
       <section class='newPost_board font-Noto-Sans'>
         <!-- article__post-->
         <h2 class='font-Merri newPost__site-name'>Add a New Blog Post</h2>
-        <form method='POST' action='/update_article/<%= article.id%>' class='newPost__newPost-form'>
+        <form method='POST' action='/update-article/<%= article.id%>' class='newPost__newPost-form'>
           <input type='text' class='newPost__add-title' name='title' placeholder='Title' value="<%= article.title%>"></input>
           <!-- for add new category -->
           <!-- <div class='newPost__category'> -->
