--- a/homeworks/week17/hw1/views/blog_admin.ejs
+++ b/homeworks/week17/hw1/views/blog_admin.ejs
@@ -9,42 +9,38 @@
       <%- include('template/banner') %>
       <section class='section__posts wrapper font-Serif-TC'>
         <div class='article__lists'>
+          <% for (let i = 0; i < article.length; i++) { %>
           <div class='article__post'>
             <div class='article__photo article__photo-admin'></div>
             <div class='article__body article__body-admin'>
-              <div class='article__title article__title-admin'>title</div>
+              <div class='article__title article__title-admin'><%= article[i].title %></div>
               <div class='article__info article__date-admin'>
                 <div class='icon__post-style icon__clock'></div>
-                <div class='article__date font-Merri'>2020.01.20</div>
+                <div class='article__date font-Merri'><%= moment(article[i].createdAt).format(shortDateFormat) %></div>
               </div>
               <div class='article__info article__catelog-admin'>
                 <div class='icon__post-style icon__folder'></div>
-                <div class='article__category'>journal</div>
+                <div class='article__category'><%= article[i].category %></div>
               </div>
             </div>
+            <% if (username == article[i].User.username) { %>
             <div class='article__btn-position font-Merri'>
-              <a class='article__btn-style' href='update_post.php?id=1'>
+              <a class='article__btn-style' href='update-article/<%= article[i].id %>'>
                 <div class='btn__edit'>
                   <div class='icon__edit-style icon__edit'></div><span>Edit</span>
                 </div>
               </a>
-              <a class='article__btn-style' href='handle__delete_post.php?id=1'>
+              <a class='article__btn-style' href='/delete/<%= article[i].id %>'>
                 <div class='btn__delete'>
                   <div class='icon__edit-style icon__delete'></div><span>Delete</span>
                 </div>
               </a>
             </div>
-            <?php } ?>
+            <% } %>
           </div>
           <!-- 分隔線 -->
           <div class='article__dividing-line'></div>
-        <?php } ?>
-          <!-- 新增文章，也要連 dividing line ＋ 文章本身，一起新增         
-          <div class='article__dividing-line'></div>
-          <div class='article__post'>
-          </div> 
-        -->
-
+          <% } %>
         </div>
       </section>
     </main>
