修改抽獎錯誤及餐廳首頁按鈕

--- a/homeworks/week17/hw2/public/css/_layout.scss
+++ b/homeworks/week17/hw2/public/css/_layout.scss
@@ -17,6 +17,7 @@ h2 {
   &__site-name {
     color: #489846;
     font-size: 36px;
+    text-decoration: none;
   }
 &__list {
 	list-style: none; /*2. 把討厭的 ul 符號關掉*/
