--- a/homeworks/week17/hw2/views/template/navbar.ejs
+++ b/homeworks/week17/hw2/views/template/navbar.ejs
@@ -1,7 +1,7 @@
 <nav class='navbar'>
 	<div class='wrapper'>
 		<div class='navbar__site-name'>
-			Just A Bite!
+			<a href='/' class='navbar__site-name'>Just A Bite!</a>
 		</div>
 		<ul class='navbar__list'>
 			<li><a href='/lottery'>抽個大獎</a></li>
